dev1/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  namespace: ingress-nginx
spec:
  rules:
  - host: www.k8training.ibumasood.com
    http:
      paths:
      - backend:
          serviceName: hello-service
          servicePort: 80
